# yolo_strongsort

./: README.md  pyproject.toml
docs/: memo.md
models/: memo.md
shell/: image_predict.sh  movie_predict_yolov5.sh  movie_predict_yolov5_crowdhuman.sh  movie_predict_yolov5_crowdhuman_person_only.sh
src/: download_and_crop_video.py
src/StrongSORT-YOLO/: image_predict.sh  movie_predict_yolov5.sh  requirements.txt
src/StrongSORT-YOLO/strong_sort/sort/: nn_matching.py
src/StrongSORT-YOLO/strong_sort/utils/: parser.py
